# SafewithMe---AI-Mental-health-advisor

./: README.md  pyproject.toml
backend/: ai_agent.py  main.py  pyproject.toml
