[project]
name = "aibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "googlemaps>=4.10.0",
    "langchain>=1.0.8",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "twilio>=9.8.7",
    "uvicorn>=0.38.0",
]
